improved how 'hostname' and 'selfRoot' variables are set in a way that's compatible with both client and server rendering. normalized a bunch of l10n strings

--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -2,11 +2,28 @@
     "locales": ["es-MX"],
     "formats": {"number": {}, "date": {}, "time": {}},
     "messages": {
-        "top": {
-            "greeting": {
-                "loggedIn": "¡Hola {username}!",
-                "notLoggedIn": "¡entrá!"
-            }
+        "LoginStatus": {
+            "loggedInGreeting": "¡Hola {username}!",
+            "notLoggedInGreeting": "¡entrá!",
+            "logOutMessage": "Salir"
+        },
+        "AddPhraseForm": {
+            "addPhrase": "Introduce una frase",
+            "newPhrasePlaceHolder": "introduce una nueva frase aquí",
+            "submitPhrase": "enviar"
+        },
+        "AddDefinitionForm": {
+            "addDefinition": "Agrega una definición",
+            "addDefinitionPlaceHolder": "introduce un nuevo significado o definición para \"{phrase}\" aquí",
+            "submitDefinition": "enviar"
+        },
+        "NavBar": {
+            "home": "Inicio",
+            "about": "Acerca de",
+            "jobs": "Empleos"
+        },
+        "TopSearchCaption": {
+            "showingResultsForSearchTerm": "mostrando resultados para la búsqueda de \"{searchTerm}\""
         }
     }
 }
