--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -2,6 +2,9 @@
     "locales": ["es-MX"],
     "formats": {"number": {}, "date": {}, "time": {}},
     "messages": {
+        "SearchBar": {
+            "placeHolder": "busca..."
+        },
         "LoginStatus": {
             "loggedInGreeting": "¡Hola {username}!",
             "notLoggedInGreeting": "¡entrá!",
