partial progress integrating router into UI interactions

--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -2,6 +2,11 @@
     "locales": ["es-MX"],
     "formats": {"number": {}, "date": {}, "time": {}},
     "messages": {
+        "top": {
+            "greeting": {
+                "notLoggedInGre": "d"
+            }
+        },
         "SearchBar": {
             "placeHolder": "busca..."
         },
