started bubbling up errors all the way up to the UI, to give the user feedback

--- a/shared/src/l10n/l10n-en-US.json
+++ b/shared/src/l10n/l10n-en-US.json
@@ -15,6 +15,9 @@
             "newDefinition": {
                 "placeHolder": "enter a new definition for phrase '{phrase}' here"
             }
+        },
+        "LoggedInMixin": {
+            "requiredLoginMissing": "attempted to perform an operation that requires you to be logged in, without being logged in"
         }
     }
 }
