fixed svg thumb DOM manipulation

--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -2,6 +2,9 @@
     "locales": ["es-MX"],
     "formats": {"number": {}, "date": {}, "time": {}},
     "messages": {
+        "Errors": {
+            "generic": "algo ha salido mal, lo sentimos..."
+        },
         "SearchBar": {
             "placeHolder": "busca..."
         },
