--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -3,7 +3,8 @@
     "formats": {"number": {}, "date": {}, "time": {}},
     "messages": {
         "Errors": {
-            "generic": "algo ha salido mal, lo sentimos..."
+            "generic": "algo ha salido mal, lo sentimos...",
+            "OK": "OK"
         },
         "SearchBar": {
             "placeHolder": "busca..."
