--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -50,7 +50,7 @@
             "voteActivityEntry": "{vote, select, up {Votaste a favor de una definición para la frase o palabra \"{phrase}\"} down {Votaste en contra de una definición para la frase o palabra \"{phrase}\"} other {Votaste y luego anulaste tu voto por una definición para la frase o palabra \"{phrase}\"}}"
         },
         "PhraseDetails": {
-            "backToSearchResults": "regresar a los resultados de la búsqueda"
+            "backToSearchResults": "regresar a los resultados de búsqueda"
         }
     }
 }
