--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -8,7 +8,20 @@
             "validationError": "Por favor corrije y/o añade los datos faltantes e inténtalo de nuevo.",
             "missingField": "campo faltante",
             "duplicateField": "duplicado. favor de cambiar",
-            "invalidField": "formato no válido. favor de corregir"
+            "invalidField": "formato no válido. favor de corregir",
+            "errno1": "la cuenta del usuario correspondiente a ese correo electrónico ya había sido verificada",
+            "errno2": "se ha introducido un código de verificación que no es válido",
+            "errno3": "no hay un usuario con el correo electrónico introducido",
+            "errno4": "sucedió un problema al tratar de marcar ésta cuenta de usuario como verificada",
+            "errno5": "no pudimos leer la información de la cuenta para verificar si el código es válido",
+            "errno6": "correo electrónico ausente del cuerpo de la petición HTTP",
+            "errno7": "contraseña ausente del cuerpo de la petición HTTP",
+            "errno8": "contraseña incorrecta",
+            "errno9": "algo ha salido mal y falló tu entrada al sistema"
+        },
+        "Infos": {
+            "infono1": "la verificación ha sido exitosa",
+            "infono2": "se ha ingresado al sistema con éxito"
         },
         "SearchBar": {
             "placeHolder": "busca..."
