initial tooling setup before starting to make the site look nice. swapped out the grunt sass plugin in favor of compass

--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -24,6 +24,9 @@
             "infono2": "se ha ingresado al sistema con éxito",
             "infono3": "se ha salido del sistema con éxito"
         },
+        "Footer": {
+            "copyrightNotice": "Copyright (c). Todos los derechos reservados. 2014."
+        },
         "SearchBar": {
             "placeHolder": "busca..."
         },
