--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -112,7 +112,7 @@
             "backToSearchResults": "regresar a los resultados de búsqueda"
         },
         "PhraseSearchResult": {
-            "missingDefinition": "-- esta palabra o frase aún no cuenta con definiciones --"
+            "missingDefinition": "esta palabra o frase aún no cuenta con definiciones"
         },
         "VerificationPrompt": {
             "formTitle": "Verificación de nueva cuenta de usuario",
