--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -96,8 +96,8 @@
             "requiredLoginMissing": "se intentó realizar una operación para la cual es necesario haber entrado al sistema como usuario registrado, sin haberlo hecho"
         },
         "DefinitionInDetails": {
-            "thumbsUpMessage": "{numVotes, plural, =0 {no hay votos positivos} =1 {hay un voto positivo} other {hay # votos positivos}}",
-            "thumbsDownMessage": "{numVotes, plural, =0 {no hay votos negativos} =1 {hay un voto negativo} other {hay # votos negativos}}",
+            "thumbsUpMessage": "{numVotes, plural, =0 {no hay votos} =1 {un voto} other {# votos}}",
+            "thumbsDownMessage": "{numVotes, plural, =0 {no hay votos} =1 {un voto} other {# votos}}",
             "thumbsUpTitle": "{currentVote, select, up {haz clic para eliminar tu voto anterior} other {vota a favor}}",
             "thumbsDownTitle": "{currentVote, select, down {haz clic para eliminar tu voto anterior} other {vota en contra}}",
             "loginRequiredToVote": "para poder votar, debes primero entrar con tu cuenta de usuario"
@@ -121,6 +121,10 @@
             "emailFieldLabel": "El correo que usaste al darte de alta",
             "emailFieldPlaceholder": "correo electrónico",
             "submit": "mandar"
+        },
+        "Abbreviations": {
+            "definition": "def.",
+            "example": "ej."
         }
     }
 }
