structured sass in a way that it's easy to have low-contrast css based on a few basic settings.

--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -58,7 +58,7 @@
             "formDescription": "Introduce algunos datos para crear una nueva cuenta de usuario.",
             "usernameFieldPlaceholder": "correo electrónico",
             "passwordFieldPlaceholder": "contraseña",
-            "nicknameFieldPlaceholder": "Alias, apodo o nombre abreviado",
+            "nicknameFieldPlaceholder": "Alias o apodo",
             "firstNameFieldPlaceholder": "nombre",
             "lastNameFieldPlaceholder": "apellidos",
             "submitButtonValue": "Crear",
