--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -5,6 +5,8 @@
         "Errors": {
             "generic": "algo ha salido mal, lo sentimos...",
             "OK": "OK",
+            "yes": "Yes",
+            "no": "No",
             "validationError": "Por favor corrije y/o añade los datos faltantes e intentalo de nuevo.",
             "missingField": "campo faltante",
             "duplicateField": "duplicado. favor de cambiar",
