styled new elements on Phrase Details page. styling New Definition page (w.i.p.)

--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -130,6 +130,9 @@
         "Abbreviations": {
             "definition": "def.",
             "example": "ej."
+        },
+        "PhraseInDetails": {
+            "addDefinitionCaption": "Agrega una definición"
         }
     }
 }
