styled a few more components, now with better understanding on how sass/susy work

--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -110,6 +110,12 @@
             "tags": "Etiquetas:",
             "by": "Por:"
         },
+        "ContributorProfile": {
+            "nickname": "nombre de usuario",
+            "firstName": "nombre",
+            "lastName": "apellidos",
+            "memberSince": "miembro desde"
+        },
         "ContributorActivityItem": {
             "goToPhraseLink": "Ir",
             "phraseActivityEntry": "Contribuíste la frase o palabra \"{phrase}\"",
