re-factored 'activity' WS and React modules to handle a normalized stream of activity instead of separate streams for each type of activity

--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -114,7 +114,10 @@
             "nickname": "nombre de usuario",
             "firstName": "nombre",
             "lastName": "apellidos",
-            "memberSince": "miembro desde"
+            "memberSince": "miembro desde",
+            "phrasesTab": "Frases",
+            "definitionsTab": "Definiciones",
+            "votesTab": "Votos"
         },
         "ContributorActivityItem": {
             "goToPhraseLink": "Ir",
