--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -120,7 +120,7 @@
             "votesTab": "Votos"
         },
         "ContributorActivityItem": {
-            "goToPhraseLink": "Ir",
+            "goToPhraseLink": "Ver",
             "phraseActivityEntry": "Contribuíste la frase o palabra \"{phrase}\"",
             "definitionActivityEntry": "Contribuíste una definición para la frase o palabra \"{phrase}\"",
             "voteActivityEntry": "{vote, select, up {Votaste a favor de una definición para la frase o palabra \"{phrase}\"} down {Votaste en contra de una definición para la frase o palabra \"{phrase}\"} other {Votaste y luego anulaste tu voto por una definición para la frase o palabra \"{phrase}\"}}"
@@ -145,6 +145,17 @@
         },
         "PhraseInDetails": {
             "addDefinitionCaption": "Agrega una definición"
+        },
+        "Leaderboard": {
+            "leaderboard": "Tabla de puntuación",
+            "user": "Usuario",
+            "points": "Puntos",
+            "pointCalculationRulesTitle": "Los puntos se calculan con base en la diferencia entre los votos positivos y los votos negativos que han recibido las definiciones de cada usuario."
+        },
+        "LeaderboardItem": {
+            "leaderboard": "Tabla de puntuación",
+            "user": "Usuario",
+            "points": "Puntos"
         }
     }
 }
